	PR c++/80179 - ICE with initialized flexible array member.

* constexpr.c (verify_ctor_sanity): Handle flexible array members.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@247067 138bc75d-0d04-0410-961f-82ee72b054a4